--- a/css/translated.css
+++ b/css/translated.css
@@ -103,7 +103,7 @@ p {
   margin: 40px;
   padding: 40px; }
 
-.calefaccion, .encontranos-1, .encontranos-2, .encontranos-3, .encontranos-4, .encontranos-5 {
+.calefaccion {
   text-transform: uppercase;
   justify-content: center;
   flex-wrap: wrap; }
@@ -176,77 +176,3 @@ h4 {
 
 /* variables */
 /* mapas */
-.color-primary {
-  color: red;
-  background: cyan;
-  text-shadow: 2px 2px 4px #990000; }
-
-.color-secondary {
-  color: blue;
-  background: yellow;
-  text-shadow: 2px 2px 4px #000099; }
-
-.color-third {
-  color: orange;
-  background: #005aff;
-  text-shadow: 2px 2px 4px #996300; }
-
-.color-primary {
-  color: red;
-  background: cyan;
-  text-shadow: 2px 2px 4px #990000; }
-
-.color-secondary {
-  color: blue;
-  background: yellow;
-  text-shadow: 2px 2px 4px #000099; }
-
-.color-third {
-  color: orange;
-  background: #005aff;
-  text-shadow: 2px 2px 4px #996300; }
-
-.font-1 {
-  font-size: 2rem; }
-
-.font-2 {
-  font-size: 3rem; }
-
-.font-3 {
-  font-size: 4rem; }
-
-.font-4 {
-  font-size: 5rem; }
-
-.font-5 {
-  font-size: 6rem; }
-
-.font-6 {
-  font-size: 7rem; }
-
-.font-7 {
-  font-size: 8rem; }
-
-.font-8 {
-  font-size: 9rem; }
-
-.font-9 {
-  font-size: 10rem; }
-
-.font-10 {
-  font-size: 11rem; }
-
-.encontranos-1 {
-  font-size: 1rem; }
-
-.encontranos-2 {
-  font-size: 2rem; }
-
-.encontranos-3 {
-  font-size: 3rem; }
-
-.encontranos-4 {
-  font-size: 4rem; }
-
-.encontranos-5 {
-  font-size: 5rem; }
